y.output
Terminals unused in grammar

   ARROW


Grammar

    0 $accept: program $end

    1 program: CLASS ID LBRACE metodos RBRACE

    2 metodos: %empty
    3        | MethodDecl metodos
    4        | FieldDecl metodos
    5        | SEMICOLON metodos

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type ID FieldDeclNext SEMICOLON

    8 FieldDeclNext: %empty
    9              | COMMA ID FieldDeclNext

   10 Type: BOOL
   11     | INT
   12     | DOUBLE

   13 MethodHeader: Type ID LPAR MethodParams RPAR
   14             | VOID ID LPAR MethodParams RPAR

   15 MethodParams: %empty
   16             | Type ID MethodParamsNext
   17             | STRING LSQ RSQ ID

   18 MethodParamsNext: %empty
   19                 | COMMA Type ID MethodParamsNext

   20 MethodBody: LBRACE Body RBRACE

   21 Body: %empty
   22     | VarDecl Body
   23     | Statement Body

   24 VarDecl: Type ID VarDeclNext SEMICOLON

   25 VarDeclNext: %empty
   26            | COMMA ID VarDeclNext

   27 Statement: IF LPAR Expr RPAR Statement
   28          | IF LPAR Expr RPAR Statement ELSE Statement
   29          | WHILE LPAR Expr RPAR Statement
   30          | RETURN StatementExpOp SEMICOLON
   31          | LBRACE StatementZrOuMais RBRACE
   32          | StateMethodIAssignmentParseArgs SEMICOLON
   33          | PRINT LPAR StatementPrint RPAR SEMICOLON

   34 StatementZrOuMais: %empty
   35                  | Statement StatementZrOuMais

   36 StatementExpOp: %empty
   37               | Expr

   38 StatementPrint: STRLIT
   39               | Expr

   40 StateMethodIAssignmentParseArgs: %empty
   41                                | MethodInvocation
   42                                | Assigment
   43                                | ParseArgs

   44 MethodInvocation: ID LPAR ExpCommaExpOP RPAR

   45 ExpCommaExpOP: %empty
   46              | Expr CommaExprZrOuMais

   47 CommaExprZrOuMais: %empty
   48                  | COMMA Expr CommaExprZrOuMais

   49 Assigment: ID ASSIGN Expr

   50 ParseArgs: PARSEINT LPAR ID LSQ Expr RSQ RPAR

   51 Expr: Expr AND Expr
   52     | Expr OR Expr
   53     | Expr EQ Expr
   54     | Expr GE Expr
   55     | Expr GT Expr
   56     | Expr LE Expr
   57     | Expr LT Expr
   58     | Expr NE Expr
   59     | Expr PLUS Expr
   60     | Expr MINUS Expr
   61     | Expr STAR Expr
   62     | Expr DIV Expr
   63     | Expr MOD Expr
   64     | Expr XOR Expr
   65     | Expr LSHIFT Expr
   66     | Expr RSHIFT Expr
   67     | NOT Expr
   68     | MINUS Expr
   69     | PLUS Expr
   70     | LPAR Expr RPAR
   71     | MethodInvocation
   72     | Assigment
   73     | ParseArgs
   74     | ID DotLengthOp
   75     | REALLIT
   76     | BOOLLIT
   77     | INTLIT

   78 DotLengthOp: %empty
   79            | DOTLENGTH

   80 FieldDecl: error SEMICOLON

   81 Statement: error SEMICOLON

   82 ParseArgs: PARSEINT LPAR error RPAR

   83 MethodInvocation: ID LPAR error RPAR

   84 Expr: LPAR error RPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 80 81 82 83 84
BOOLLIT (258) 76
AND (259) 51
ASSIGN (260) 49
STAR (261) 61
COMMA (262) 9 19 26 48
DIV (263) 62
EQ (264) 53
GE (265) 54
GT (266) 55
LBRACE (267) 1 20 31
LE (268) 56
LPAR (269) 13 14 27 28 29 33 44 50 70 82 83 84
RPAR (270) 13 14 27 28 29 33 44 50 70 82 83 84
LSQ (271) 17 50
LT (272) 57
MINUS (273) 60 68
MOD (274) 63
NE (275) 58
NOT (276) 67
OR (277) 52
PLUS (278) 59 69
RBRACE (279) 1 20 31
RSQ (280) 17 50
SEMICOLON (281) 5 7 24 30 32 33 80 81
ARROW (282)
LSHIFT (283) 65
RSHIFT (284) 66
XOR (285) 64
BOOL (286) 10
CLASS (287) 1
DOTLENGTH (288) 79
DOUBLE (289) 12
ELSE (290) 28
IF (291) 27 28
INT (292) 11
PRINT (293) 33
PARSEINT (294) 50 82
PUBLIC (295) 6 7
RETURN (296) 30
STATIC (297) 6 7
STRING (298) 17
VOID (299) 14
WHILE (300) 29
REALLIT (301) 75
ID (302) 1 7 9 13 14 16 17 19 24 26 44 49 50 74 83
INTLIT (303) 77
STRLIT (304) 38
REDUCE (305)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
metodos (53)
    on left: 2 3 4 5, on right: 1 3 4 5
MethodDecl (54)
    on left: 6, on right: 3
FieldDecl (55)
    on left: 7 80, on right: 4
FieldDeclNext (56)
    on left: 8 9, on right: 7 9
Type (57)
    on left: 10 11 12, on right: 7 13 16 19 24
MethodHeader (58)
    on left: 13 14, on right: 6
MethodParams (59)
    on left: 15 16 17, on right: 13 14
MethodParamsNext (60)
    on left: 18 19, on right: 16 19
MethodBody (61)
    on left: 20, on right: 6
Body (62)
    on left: 21 22 23, on right: 20 22 23
VarDecl (63)
    on left: 24, on right: 22
VarDeclNext (64)
    on left: 25 26, on right: 24 26
Statement (65)
    on left: 27 28 29 30 31 32 33 81, on right: 23 27 28 29 35
StatementZrOuMais (66)
    on left: 34 35, on right: 31 35
StatementExpOp (67)
    on left: 36 37, on right: 30
StatementPrint (68)
    on left: 38 39, on right: 33
StateMethodIAssignmentParseArgs (69)
    on left: 40 41 42 43, on right: 32
MethodInvocation (70)
    on left: 44 83, on right: 41 71
ExpCommaExpOP (71)
    on left: 45 46, on right: 44
CommaExprZrOuMais (72)
    on left: 47 48, on right: 46 48
Assigment (73)
    on left: 49, on right: 42 72
ParseArgs (74)
    on left: 50 82, on right: 43 73
Expr (75)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76 77 84, on right: 27 28 29 37 39 46 48 49
    50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
DotLengthOp (76)
    on left: 78 79, on right: 74


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS . ID LBRACE metodos RBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS ID . LBRACE metodos RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: CLASS ID LBRACE . metodos RBRACE

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 2 (metodos)

    metodos     go to state 9
    MethodDecl  go to state 10
    FieldDecl   go to state 11


State 6

   80 FieldDecl: error . SEMICOLON

    SEMICOLON  shift, and go to state 12


State 7

    5 metodos: SEMICOLON . metodos

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 2 (metodos)

    metodos     go to state 13
    MethodDecl  go to state 10
    FieldDecl   go to state 11


State 8

    6 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC . STATIC Type ID FieldDeclNext SEMICOLON

    STATIC  shift, and go to state 14


State 9

    1 program: CLASS ID LBRACE metodos . RBRACE

    RBRACE  shift, and go to state 15


State 10

    3 metodos: MethodDecl . metodos

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 2 (metodos)

    metodos     go to state 16
    MethodDecl  go to state 10
    FieldDecl   go to state 11


State 11

    4 metodos: FieldDecl . metodos

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7
    PUBLIC     shift, and go to state 8

    RBRACE  reduce using rule 2 (metodos)

    metodos     go to state 17
    MethodDecl  go to state 10
    FieldDecl   go to state 11


State 12

   80 FieldDecl: error SEMICOLON .

    $default  reduce using rule 80 (FieldDecl)


State 13

    5 metodos: SEMICOLON metodos .

    $default  reduce using rule 5 (metodos)


State 14

    6 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC . Type ID FieldDeclNext SEMICOLON

    BOOL    shift, and go to state 18
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    VOID    shift, and go to state 21

    Type          go to state 22
    MethodHeader  go to state 23


State 15

    1 program: CLASS ID LBRACE metodos RBRACE .

    $default  reduce using rule 1 (program)


State 16

    3 metodos: MethodDecl metodos .

    $default  reduce using rule 3 (metodos)


State 17

    4 metodos: FieldDecl metodos .

    $default  reduce using rule 4 (metodos)


State 18

   10 Type: BOOL .

    $default  reduce using rule 10 (Type)


State 19

   12 Type: DOUBLE .

    $default  reduce using rule 12 (Type)


State 20

   11 Type: INT .

    $default  reduce using rule 11 (Type)


State 21

   14 MethodHeader: VOID . ID LPAR MethodParams RPAR

    ID  shift, and go to state 24


State 22

    7 FieldDecl: PUBLIC STATIC Type . ID FieldDeclNext SEMICOLON
   13 MethodHeader: Type . ID LPAR MethodParams RPAR

    ID  shift, and go to state 25


State 23

    6 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    LBRACE  shift, and go to state 26

    MethodBody  go to state 27


State 24

   14 MethodHeader: VOID ID . LPAR MethodParams RPAR

    LPAR  shift, and go to state 28


State 25

    7 FieldDecl: PUBLIC STATIC Type ID . FieldDeclNext SEMICOLON
   13 MethodHeader: Type ID . LPAR MethodParams RPAR

    COMMA  shift, and go to state 29
    LPAR   shift, and go to state 30

    $default  reduce using rule 8 (FieldDeclNext)

    FieldDeclNext  go to state 31


State 26

   20 MethodBody: LBRACE . Body RBRACE

    error     shift, and go to state 32
    LBRACE    shift, and go to state 33
    BOOL      shift, and go to state 18
    DOUBLE    shift, and go to state 19
    IF        shift, and go to state 34
    INT       shift, and go to state 20
    PRINT     shift, and go to state 35
    PARSEINT  shift, and go to state 36
    RETURN    shift, and go to state 37
    WHILE     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 21 (Body)
    SEMICOLON  reduce using rule 40 (StateMethodIAssignmentParseArgs)

    Type                             go to state 40
    Body                             go to state 41
    VarDecl                          go to state 42
    Statement                        go to state 43
    StateMethodIAssignmentParseArgs  go to state 44
    MethodInvocation                 go to state 45
    Assigment                        go to state 46
    ParseArgs                        go to state 47


State 27

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 6 (MethodDecl)


State 28

   14 MethodHeader: VOID ID LPAR . MethodParams RPAR

    BOOL    shift, and go to state 18
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    STRING  shift, and go to state 48

    $default  reduce using rule 15 (MethodParams)

    Type          go to state 49
    MethodParams  go to state 50


State 29

    9 FieldDeclNext: COMMA . ID FieldDeclNext

    ID  shift, and go to state 51


State 30

   13 MethodHeader: Type ID LPAR . MethodParams RPAR

    BOOL    shift, and go to state 18
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    STRING  shift, and go to state 48

    $default  reduce using rule 15 (MethodParams)

    Type          go to state 49
    MethodParams  go to state 52


State 31

    7 FieldDecl: PUBLIC STATIC Type ID FieldDeclNext . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 32

   81 Statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 33

   31 Statement: LBRACE . StatementZrOuMais RBRACE

    error     shift, and go to state 32
    LBRACE    shift, and go to state 33
    IF        shift, and go to state 34
    PRINT     shift, and go to state 35
    PARSEINT  shift, and go to state 36
    RETURN    shift, and go to state 37
    WHILE     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 34 (StatementZrOuMais)
    SEMICOLON  reduce using rule 40 (StateMethodIAssignmentParseArgs)

    Statement                        go to state 55
    StatementZrOuMais                go to state 56
    StateMethodIAssignmentParseArgs  go to state 44
    MethodInvocation                 go to state 45
    Assigment                        go to state 46
    ParseArgs                        go to state 47


State 34

   27 Statement: IF . LPAR Expr RPAR Statement
   28          | IF . LPAR Expr RPAR Statement ELSE Statement

    LPAR  shift, and go to state 57


State 35

   33 Statement: PRINT . LPAR StatementPrint RPAR SEMICOLON

    LPAR  shift, and go to state 58


State 36

   50 ParseArgs: PARSEINT . LPAR ID LSQ Expr RSQ RPAR
   82          | PARSEINT . LPAR error RPAR

    LPAR  shift, and go to state 59


State 37

   30 Statement: RETURN . StatementExpOp SEMICOLON

    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    $default  reduce using rule 36 (StatementExpOp)

    StatementExpOp    go to state 68
    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 72


State 38

   29 Statement: WHILE . LPAR Expr RPAR Statement

    LPAR  shift, and go to state 73


State 39

   44 MethodInvocation: ID . LPAR ExpCommaExpOP RPAR
   49 Assigment: ID . ASSIGN Expr
   83 MethodInvocation: ID . LPAR error RPAR

    ASSIGN  shift, and go to state 74
    LPAR    shift, and go to state 75


State 40

   24 VarDecl: Type . ID VarDeclNext SEMICOLON

    ID  shift, and go to state 76


State 41

   20 MethodBody: LBRACE Body . RBRACE

    RBRACE  shift, and go to state 77


State 42

   22 Body: VarDecl . Body

    error     shift, and go to state 32
    LBRACE    shift, and go to state 33
    BOOL      shift, and go to state 18
    DOUBLE    shift, and go to state 19
    IF        shift, and go to state 34
    INT       shift, and go to state 20
    PRINT     shift, and go to state 35
    PARSEINT  shift, and go to state 36
    RETURN    shift, and go to state 37
    WHILE     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 21 (Body)
    SEMICOLON  reduce using rule 40 (StateMethodIAssignmentParseArgs)

    Type                             go to state 40
    Body                             go to state 78
    VarDecl                          go to state 42
    Statement                        go to state 43
    StateMethodIAssignmentParseArgs  go to state 44
    MethodInvocation                 go to state 45
    Assigment                        go to state 46
    ParseArgs                        go to state 47


State 43

   23 Body: Statement . Body

    error     shift, and go to state 32
    LBRACE    shift, and go to state 33
    BOOL      shift, and go to state 18
    DOUBLE    shift, and go to state 19
    IF        shift, and go to state 34
    INT       shift, and go to state 20
    PRINT     shift, and go to state 35
    PARSEINT  shift, and go to state 36
    RETURN    shift, and go to state 37
    WHILE     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 21 (Body)
    SEMICOLON  reduce using rule 40 (StateMethodIAssignmentParseArgs)

    Type                             go to state 40
    Body                             go to state 79
    VarDecl                          go to state 42
    Statement                        go to state 43
    StateMethodIAssignmentParseArgs  go to state 44
    MethodInvocation                 go to state 45
    Assigment                        go to state 46
    ParseArgs                        go to state 47


State 44

   32 Statement: StateMethodIAssignmentParseArgs . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 45

   41 StateMethodIAssignmentParseArgs: MethodInvocation .

    $default  reduce using rule 41 (StateMethodIAssignmentParseArgs)


State 46

   42 StateMethodIAssignmentParseArgs: Assigment .

    $default  reduce using rule 42 (StateMethodIAssignmentParseArgs)


State 47

   43 StateMethodIAssignmentParseArgs: ParseArgs .

    $default  reduce using rule 43 (StateMethodIAssignmentParseArgs)


State 48

   17 MethodParams: STRING . LSQ RSQ ID

    LSQ  shift, and go to state 81


State 49

   16 MethodParams: Type . ID MethodParamsNext

    ID  shift, and go to state 82


State 50

   14 MethodHeader: VOID ID LPAR MethodParams . RPAR

    RPAR  shift, and go to state 83


State 51

    9 FieldDeclNext: COMMA ID . FieldDeclNext

    COMMA  shift, and go to state 29

    $default  reduce using rule 8 (FieldDeclNext)

    FieldDeclNext  go to state 84


State 52

   13 MethodHeader: Type ID LPAR MethodParams . RPAR

    RPAR  shift, and go to state 85


State 53

    7 FieldDecl: PUBLIC STATIC Type ID FieldDeclNext SEMICOLON .

    $default  reduce using rule 7 (FieldDecl)


State 54

   81 Statement: error SEMICOLON .

    $default  reduce using rule 81 (Statement)


State 55

   35 StatementZrOuMais: Statement . StatementZrOuMais

    error     shift, and go to state 32
    LBRACE    shift, and go to state 33
    IF        shift, and go to state 34
    PRINT     shift, and go to state 35
    PARSEINT  shift, and go to state 36
    RETURN    shift, and go to state 37
    WHILE     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 34 (StatementZrOuMais)
    SEMICOLON  reduce using rule 40 (StateMethodIAssignmentParseArgs)

    Statement                        go to state 55
    StatementZrOuMais                go to state 86
    StateMethodIAssignmentParseArgs  go to state 44
    MethodInvocation                 go to state 45
    Assigment                        go to state 46
    ParseArgs                        go to state 47


State 56

   31 Statement: LBRACE StatementZrOuMais . RBRACE

    RBRACE  shift, and go to state 87


State 57

   27 Statement: IF LPAR . Expr RPAR Statement
   28          | IF LPAR . Expr RPAR Statement ELSE Statement

    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 88


State 58

   33 Statement: PRINT LPAR . StatementPrint RPAR SEMICOLON

    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67
    STRLIT    shift, and go to state 89

    StatementPrint    go to state 90
    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 91


State 59

   50 ParseArgs: PARSEINT LPAR . ID LSQ Expr RSQ RPAR
   82          | PARSEINT LPAR . error RPAR

    error  shift, and go to state 92
    ID     shift, and go to state 93


State 60

   76 Expr: BOOLLIT .

    $default  reduce using rule 76 (Expr)


State 61

   70 Expr: LPAR . Expr RPAR
   84     | LPAR . error RPAR

    error     shift, and go to state 94
    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 95


State 62

   68 Expr: MINUS . Expr

    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 96


State 63

   67 Expr: NOT . Expr

    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 97


State 64

   69 Expr: PLUS . Expr

    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 98


State 65

   75 Expr: REALLIT .

    $default  reduce using rule 75 (Expr)


State 66

   44 MethodInvocation: ID . LPAR ExpCommaExpOP RPAR
   49 Assigment: ID . ASSIGN Expr
   74 Expr: ID . DotLengthOp
   83 MethodInvocation: ID . LPAR error RPAR

    ASSIGN     shift, and go to state 74
    LPAR       shift, and go to state 75
    DOTLENGTH  shift, and go to state 99

    $default  reduce using rule 78 (DotLengthOp)

    DotLengthOp  go to state 100


State 67

   77 Expr: INTLIT .

    $default  reduce using rule 77 (Expr)


State 68

   30 Statement: RETURN StatementExpOp . SEMICOLON

    SEMICOLON  shift, and go to state 101


State 69

   71 Expr: MethodInvocation .

    $default  reduce using rule 71 (Expr)


State 70

   72 Expr: Assigment .

    $default  reduce using rule 72 (Expr)


State 71

   73 Expr: ParseArgs .

    $default  reduce using rule 73 (Expr)


State 72

   37 StatementExpOp: Expr .
   51 Expr: Expr . AND Expr
   52     | Expr . OR Expr
   53     | Expr . EQ Expr
   54     | Expr . GE Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . LT Expr
   58     | Expr . NE Expr
   59     | Expr . PLUS Expr
   60     | Expr . MINUS Expr
   61     | Expr . STAR Expr
   62     | Expr . DIV Expr
   63     | Expr . MOD Expr
   64     | Expr . XOR Expr
   65     | Expr . LSHIFT Expr
   66     | Expr . RSHIFT Expr

    AND     shift, and go to state 102
    STAR    shift, and go to state 103
    DIV     shift, and go to state 104
    EQ      shift, and go to state 105
    GE      shift, and go to state 106
    GT      shift, and go to state 107
    LE      shift, and go to state 108
    LT      shift, and go to state 109
    MINUS   shift, and go to state 110
    MOD     shift, and go to state 111
    NE      shift, and go to state 112
    OR      shift, and go to state 113
    PLUS    shift, and go to state 114
    LSHIFT  shift, and go to state 115
    RSHIFT  shift, and go to state 116
    XOR     shift, and go to state 117

    $default  reduce using rule 37 (StatementExpOp)


State 73

   29 Statement: WHILE LPAR . Expr RPAR Statement

    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 118


State 74

   49 Assigment: ID ASSIGN . Expr

    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    MethodInvocation  go to state 69
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 119


State 75

   44 MethodInvocation: ID LPAR . ExpCommaExpOP RPAR
   83                 | ID LPAR . error RPAR

    error     shift, and go to state 120
    BOOLLIT   shift, and go to state 60
    LPAR      shift, and go to state 61
    MINUS     shift, and go to state 62
    NOT       shift, and go to state 63
    PLUS      shift, and go to state 64
    PARSEINT  shift, and go to state 36
    REALLIT   shift, and go to state 65
    ID        shift, and go to state 66
    INTLIT    shift, and go to state 67

    RPAR  reduce using rule 45 (ExpCommaExpOP)

    MethodInvocation  go to state 69
    ExpCommaExpOP     go to state 121
    Assigment         go to state 70
    ParseArgs         go to state 71
    Expr              go to state 122


State 76

   24 VarDecl: Type ID . VarDeclNext SEMICOLON

    COMMA  shift, and go to state 123

    $default  reduce using rule 25 (VarDeclNext)

    VarDeclNext  go to state 124


State 77

   20 MethodBody: LBRACE Body RBRACE .

    $default  reduce using rule 20 (MethodBody)


State 78

   22 Body: VarDecl Body .

    $default  reduce using rule 22 (Body)


State 79

   23 Body: Statement Body .

    $default  reduce using rule 23 (Body)


State 80

   32 Statement: StateMethodIAssignmentParseArgs SEMICOLON .

    $default  reduce using rule 32 (Statement)


State 81

   17 MethodParams: STRING LSQ . RSQ ID

    RSQ  shift, and go to state 125


State 82

   16 MethodParams: Type ID . MethodParamsNext

    COMMA  shift, and go to state 126

    $default  reduce using rule 18 (MethodParamsNext)

    MethodParamsNext  go to state 127


State 83

   14 MethodHeader: VOID ID LPAR MethodParams RPAR .

    $default  reduce using rule 14 (MethodHeader)


State 84

    9 FieldDeclNext: COMMA ID FieldDeclNext .

    $default  reduce using rule 9 (FieldDeclNext)


State 85

   13 MethodHeader: Type ID LPAR MethodParams RPAR .

    $default  reduce using rule 13 (MethodHeader)


State 86

   35 StatementZrOuMais: Statement StatementZrOuMais .

    $default  reduce using rule 35 (StatementZrOuMais)


State 87

   31 Statement: LBRACE StatementZrOuMais RBRACE .

    $default  reduce using rule 31 (Statement)


State 88
